<resources>
    <string name="app_name">crudeApp</string>
    <string name="tvRegister">Please Fill to Register</string>
    <string name="etFirstName">firstname</string>
    <string name="etLastName">lastname</string>
    <string name="etEmail">email</string>
    <string name="etPassword">password</string>
    <string name="etComfirmPassword">retypepassword</string>
    <string name="etPhoneNumber">Phone number</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnLogin">Login</string>
    <string name="btnNewUser">Not a user? Register</string>
    <string name="tvLogin"> fill and log in below</string>
</resources>
