<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
   android:padding="20dp"
    tools:context="netvine.ighub.crudeapp.Registration">

  <LinearLayout
      android:layout_marginTop="50dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/corners"
      android:orientation="vertical">

      <TextView

          android:id="@+id/tvRegisterBelow"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="15dp"
          android:padding="5dp"
          android:text="Please Register Below"/>

      <LinearLayout
          android:layout_marginTop="0dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="10dp">

          <EditText
              android:id="@+id/etFirstName"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="15dp"
              android:layout_weight="1"
              android:hint="@string/etFirstName"/>

          <EditText
              android:id="@+id/etLastName"
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="15dp"
              android:hint="@string/etLastName"/>

      </LinearLayout>

      <EditText
          android:id="@+id/etEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="15dp"
          android:padding="10dp"
          android:hint="@string/etEmail"
          android:inputType="textEmailAddress"/>

      <LinearLayout
          android:layout_marginTop="0dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="10dp">

          <EditText
              android:id="@+id/etPassword"

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="15dp"
              android:layout_weight="1"
              android:hint="@string/etPassword"
              android:password="true"/>

          <EditText
              android:id="@+id/etcomfirmPassword"
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="15dp"
              android:hint="@string/etComfirmPassword"
              android:password="true"/>

      </LinearLayout>

      <EditText
          android:id="@+id/etPhoneNumber"
            android:padding="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="15dp"
          android:hint="@string/etPhoneNumber"/>


      <Spinner
          android:layout_marginTop="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:entries="@array/Gender"
          android:padding="10dp"
          android:dropDownSelector="@color/colorAccent">
      </Spinner>

      <Button

          android:id="@+id/btnSubmit"
          android:layout_width="wrap_content"
          android:layout_gravity="center"
          android:layout_height="wrap_content"
          android:text="Submit"
          android:background="@drawable/corners"/>
  </LinearLayout>

</LinearLayout>
